--- a/hw5/p4.tex
+++ b/hw5/p4.tex
@@ -7,3 +7,77 @@
   Appreciate the ease of programming resulting from nondeterminism
   and the availability of two tapes.
 \end{problem}
+\begin{Answer}
+  \textbf{Strategy:}
+  Let tape $A$ and tape $B$ be the two tapes in the TM.
+  Note that at the start, the input string is on tape $A$
+  (plus infinite blanks on the right end), and tape $B$ is blank.
+
+  \begin{enumroman}
+    \item Add a left-end marker ($\#$) to tape $B$ and move the head
+      on tape $B$ one step right.
+
+    \item Traverse tape $A$ from left to right, copying the contents of tape $A$
+      onto tape $B$.
+
+    \item Non-deterministically, stop copying the contents of tape $A$ onto tape $B$,
+      move the head on tape $B$ to the left-most end (but maintain the head on tape $A$
+      at its current position) and compare the remaining contents on tape $A$
+      with those copied onto tape $B$.
+
+    \item Accept if there is such a computational path that copies some (possibly empty)
+      part of the input string onto tape $B$, compares it with the remaining part
+      of the string on tape $A$, and successfully reaches the end of the string.
+  \end{enumroman}
+
+  % \step
+  \newpage
+  \emph{
+    Note: In the turing machine diagram,
+    when we read two defined symbols $(x, y)$ during a transition,
+    we specifically mean that $x \neq y$
+    (otherwise, we denote the reading as $(x, x)$
+    to specify that the readings from the two tapes are equivalent).
+    When we read $(*, *)$ during a transition,
+    we mean the two readings may be be equal or unequal,
+    or any of the readings may be undefined (presumably, the transition
+    is agnostic to the readings). However, if we do write the symbol
+    back to the tape, it's the exact symbol that we read from the tape.
+  }
+
+  \bigskip
+  
+  \begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+      \node[state, initial] (q0) at (0, 0) {$q_{start}$};
+      \node[state] (q1) at (6, 0) {$q_{copy}$};
+      \node[state] (q2) at (6, -6) {$q_{rewind-B}$};
+      \node[state] (q3) at (6, -12) {$q_{compare}$};
+      \node[state, accepting] (q4) at (12, -12) {$q_{accept}$};
+      \node[state] (q5) at (0, -12) {$q_{reject}$};
+
+      \draw (q0) edge[above] node {$(\ast, \none) \to (\ast, \#), (S, R)$} (q1)
+            (q1) edge[loop right, right] node {$(x, \none) \to (x, x), (R, R)$} (q1)
+            (q1) edge[left] node {$(x, \none) \to (x, \none), (S, S)$} (q2)
+            (q2) edge[loop right, right] node {$
+              \begin{aligned}
+                (x, x) \to (x, x), (S, L)\\
+                (x, y) \to (x, y), (S, L)
+              \end{aligned}
+            $} (q2)
+            (q2) edge[left, pos=0.3] node {$(x, \#) \to (x, \#), (S, R)$} (q3)
+            (q3) edge[loop below, below] node {$(x, x) \to (x, x), (R, R)$} (q3)
+            (q3) edge[above] node {$
+              \begin{aligned}
+                (x, y) \to (x, y), (S, S) \\
+                (x, \none) \to (x, \none), (S, S) \\
+                (\none, x) \to (\none, x), (S, S)
+              \end{aligned}    
+            $} (q5)
+            (q3) edge[above] node {$(\none, \none) \to (\none, \none), (S, S)$} (q4);
+    \end{tikzpicture}
+    \caption{Turing Machine to decide $L = \set{ww : w \in \set{0, 1}^*}$}
+    \label{fig:p4}
+  \end{figure}
+\end{Answer}
