--- a/hw5/cover.tex
+++ b/hw5/cover.tex
@@ -6,7 +6,11 @@
 
 %CREDIT STATEMENT
 \CreditStatement{
-  I discussed ideas for this homework assignment with Paul Shin.
+  All the work on this PSET is my own.
+  I usually discuss ideas with Paul Shin, but this weekend
+  we were both busy and couldn't meet to discuss ideas.
+  We only chatted about all the different things we had tried
+  out on question 2.2. (and none of them had worked yet).
 
   \step
   I also referred to the following books:
