--- a/hw5/main.tex
+++ b/hw5/main.tex
@@ -10,36 +10,31 @@
 \setlength{\footskip}{13.0pt}
 
 
-\input{cover.tex}
+\input{cover}
 \bigskip
 
 % PROBLEM 1
-\input{p1.tex}
+\input{p1}
 
 \newpage
 
 % PROBLEM 2
-\input{p2.tex}
+\input{p2}
 
 \newpage
 
 % PROBLEM 3
-\input{p3.tex}
+\input{p3}
 
 \newpage
 
 % PROBLEM 4
-\input{p4.tex}
+\input{p4}
 
 \newpage
 
 % PROBLEM 5
-\input{p5.tex}
-
-\newpage
-
-% PROBLEM 6
-\input{p6.tex}
+\input{p5}
 
 \vfill
 
