--- a/hw6/p6.tex
+++ b/hw6/p6.tex
@@ -16,3 +16,82 @@
   \step
   Prove that $\Utm$ is undecidable.
 \end{problem}
+\begin{Answer}
+  \newpage
+  \begin{claim}
+    \label{claim:tm-undecidable}
+    $\Utm$ is undecidable.
+
+    \step
+    \begin{proof}
+      Suppose $\Utm$ is decidable, that means there exists some TM
+      $M_0$ that, given any turing machine $\vector{M}$, can decide whether
+      $M$ has a useless state.
+
+      \step
+      Construct a TM $M_1$ deciding $\overline{\Utm}$ as follows:
+
+      \step
+      $M_1$ = ``On input $\vector{M}$ where $M$ is a TM:
+        \begin{enumarabic}
+          \item Run $M_0$ on $\vector{M}$.
+          \item If $M_0$ accepts $\vector{M}$, \Reject.
+          \item If $M_0$ rejects $\vector{M}$, \Accept.''
+        \end{enumarabic}
+
+      \step
+      $M_1$ accepts a TM $M$ if and only if $M_0$ rejects it and vice versa.
+      That is, $M_1$ accepts $M$ if $M$ has no useless states.
+
+      \step
+      Since turing machines always have an accepting state,
+      then every turing machine with an empty language always has \emph{at least}
+      one useless state (the accepting state).
+      
+      \step
+      $M_2$ = ``On input $\vector{M}$ where $M$ is a TM:
+        \begin{enumarabic}
+          \item Run $M_1$ on $\vector{M}$.
+          \item If $M_1$ accepts $M$, then $M$ has no useless states,
+            hence $M$ accepts some string in its input language. \Accept.
+          \item If $M_1$ rejects $M$, then $M$ has \crim{at least one} useless state.
+            Do the following:
+            \begin{enumarabic*}
+              \item Suppose $Q$ is the set of states of $M$,
+                and $q_f$ the accepting state in $M$.
+              \item For every possible subset $S \subseteq Q \setminus \set{q_f}$
+                of states in $M$:
+              \begin{enumarabic*}
+                \item Delete $S$ from $M$ to create a new turing machine $M'$.
+                \item Run $M_1$ on $\vector{M'}$.
+                \item If $M_1$ accepts $M'$, continue to the next subset $S$.
+                \item If $M_1$ rejects $M'$, then 
+              \end{enumarabic*} to create a new turing machine $M'$.
+                and run $M_1$ on $\vector{M'}$.
+              \item \green{If $M_1$ every such machine is $M_1$  $M'$,
+                then every such possible deletion still results in a TM with a useless state,
+                hence the useless state must be $q_f$. \Reject.}~\footnote{
+                  Suppose $q_f$ was not a useless state, then some other subset
+                  $\set{q_1, \ldots, q_n}$ for some $n > 0$ would contain all the useless
+                  states of $M$. Therefore, deleting this subset would result in a TM
+                  without a useless state, which would be rejected by $M_1$ given $M_1$
+                  decides $\Utm$.
+                }
+              \item If $M_1$ accepts $M'$, then some deletion resulted in a TM without a useless
+                state, meaning that $q_f$ is not useless. \Accept.''
+            \end{enumarabic*}
+        \end{enumarabic}
+
+        \step
+        Clearly, $M_2$ only accepts a turing machine $M$ if the accepting state
+        in $M$ is not a useless state. Therefore, Given $M_1$ decides $\Utm$,
+        then $M_2$ decides $\Etm$.
+
+        \step
+        But we know that $\Etm$ is undecidable, so $\Utm$ must also be undecidable.
+
+        \bigskip
+    \end{proof}
+
+  \end{claim}
+\end{Answer}
